--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <a href="./" class="social-media-icon">
                 <i class='bx bxl-twitter' ></i>
               </a>
-              <a href="./" class="social-media-icon">
+              <a href="https://instagram.com/systemsven?igshid=MzNlNGNkZWQ4Mg==" class="social-media-icon">
                 <i class='bx bxl-instagram' ></i>
               </a>
             </div>
