--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
            </div>
             <div class="social-media">
-              <a href="./" class="social-media-icon">
+              <a href="https://www.facebook.com/profile.php?id=100094476017070" class="social-media-icon">
                 <i class='bx bxl-facebook'></i>
               </a>
               <a href="./" class="social-media-icon">
