--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <a href="#contacto">Contacto</a>
       </nav>
       <div class="contenedor head">
-          <h1 class="titulo">Resolviendo Retos, Redefiniendo Posibilidades</h1>
-          <p class="copy">En SYSTEM SVEN, estamos en una misión constante de resolver desafíos y redefinir las posibilidades en el mundo del desarrollo de software</p>
+          <h1 class="titulo">NATALY TE QUIERES CASAR CON ESTE JOVEN</h1>
+          <p class="copy">Prometo quererte y respetarte y bailar K-POP contigo cuando quieras</p>
       </div>
     </header>
     <main>
